--- a/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
+++ b/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
@@ -683,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Zadanie7: Wykonaj analogicznie obliczenia stosując tym razem metodę. Która sekwencja jest najbardziej podobna do zapytania?\n",
+    "<h4> Zadanie7: Wykonaj analogicznie obliczenia stosując tym razem metodę Lempel-Ziv. Która sekwencja jest najbardziej podobna do zapytania?\n",
     "  \n",
     "<br>\n",
     "    \n",
