--- a/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
+++ b/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
@@ -238,7 +238,6 @@
    ],
    "source": [
     "#Bieżący nukleotyd jest zależny od wcześniejszego (model Markowa rzędu 1):\n",
-    "\n",
     "def random_seq2(length, nuc, firstN, trans):\n",
     "    '''Funkcja zwraca losowa sekwencje o zadanej dlugosci i zadanej macierzy przejsc'''\n",
     "    s_losowa = ''\n",
@@ -261,7 +260,7 @@
     "trans['G'] = [0.25, 0.25, 0.25, 0.25]\n",
     "trans['T'] = [0.25, 0.25, 0.25, 0.25]\n",
     "\n",
-    "firstN = [0.25, 0.25, 0.25, 0.25] #piewszy nukleotyd będzie zupelnie losowy\n",
+    "firstN = [0.25, 0.25, 0.25, 0.25] #pierwszy nukleotyd będzie zupelnie losowy\n",
     "\n",
     "#przyklad\n",
     "seq = random_seq2(100, nuc, firstN, trans)  #podajemy dlugosc sekwencji\n",
