--- a/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
+++ b/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
@@ -67,7 +67,7 @@
    ],
    "source": [
     "#przetestujemy kilka wartosci p i zobaczymy jak to wplywa na wartosc entropii\n",
-    "p = np.linspace(0.001,0.999,50) #będze sprawdzal rozne wartosci prawdopodobienstwa: od 0.001 do 0.999, 50 wartosci\n",
+    "p = np.linspace(0.001,0.999,50) #będe sprawdzal rozne wartosci prawdopodobienstwa: od 0.001 do 0.999, 50 wartosci\n",
     "h = -(p*np.log2(p)+(1-p)*np.log2(1-p)) #wzor na entropię w przypadku 2 stanow\n",
     "\n",
     "plt.plot(p,h) #rysuje zaleznosc h od p\n",
