--- a/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
+++ b/Ćwiczenia1/Analiza sekwencji oraz biologiczne bazy danych.ipynb
@@ -394,7 +394,7 @@
     "plt.xlim(0,1)\n",
     "plt.ylim(0,1)\n",
     "plt.gca().set_aspect('equal', adjustable='box')\n",
-    "#plt.savefig(\"obrazek.png\", dpi=300) #Jak chcemy zapisac do pliku to odkomentowac\n",
+    "#plt.savefig(\"obrazek.png\", dpi=300) #Jak chcemy zapisac do pliku to odkomentowac (skasować # na początku)\n",
     "plt.show()"
    ]
   },
