Update Podstawy Python i obsługi baz danych.ipynb

--- a/Podstawy Python i obsługi baz danych.ipynb
+++ b/Podstawy Python i obsługi baz danych.ipynb
@@ -316,7 +316,7 @@
    "id": "a329b2b2",
    "metadata": {},
    "source": [
-    "- Poniższy kod łączy dwa poprzednie korki, wyświetla tytuły prac z tematyki która była wcześniej wyszukiwana"
+    "- Poniższy kod łączy dwa poprzednie kroki, wyświetla tytuły prac z tematyki która była wcześniej wyszukiwana"
    ]
   },
   {
